tests/ui/traits/projection-no-progress-cycle-issue-157516.stderr
error[E0283]: type annotations needed
  --> $DIR/projection-no-progress-cycle-issue-157516.rs:16:5
   |
LL |     T::Object::OPS
   |     ^^^^^^^^^ cannot infer type for type parameter `Ctx` declared on the associated type `Object`
   |
   = note: the type must implement `Bound`
   = note: associated types cannot be accessed directly on a `trait`, they can only be accessed through a specific `impl`
note: required by a bound in `Driver::Object`
  --> $DIR/projection-no-progress-cycle-issue-157516.rs:12:22
   |
LL |     type Object<Ctx: Bound>: Alloc;
   |                      ^^^^^ required by this bound in `Driver::Object`
help: use the fully qualified path to an implementation
   |
LL -     T::Object::OPS
LL +     <Type as Bound>::Object::OPS
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0283`.
